--- a/templates/package.json
+++ b/templates/package.json
@@ -4,9 +4,9 @@
 	"description": "<%= description %>",
 	"author": "<%= author %>",
 	"scripts": {
-		"so:dev": "webpack --watch --config sobuild/sobuild.dev.js",
-		"so:serve": "webpack serve --config sobuild/sobuild.dev.js --open 'Google Chrome'",
-		"so:prod": "webpack --watch --config sobuild/sobuild.prod.js"
+		"so:dev": "webpack --watch --config sobuild.dev.js",
+		"so:serve": "webpack serve --config sobuild.dev.js --open 'Google Chrome'",
+		"so:prod": "webpack --watch --config sobuild.prod.js"
 	},
 	"dependencies": {},
 	"devDependencies": {
@@ -55,7 +55,10 @@
 		<%_ if(webpack['postcss-loader']) {-%>
 		"postcss-loader": "4.1.0",
 		<%_ } -%>
-		"webpack-merge": "^5.4.0"
+		"webpack-merge": "^5.4.0",
+		"speed-measure-webpack-plugin": "^1.3.3",
+		"webpack-bundle-analyzer": "^4.1.0",
+		"hard-source-webpack-plugin": "^0.13.1",
 	},
 	"engines": {
 		"node": ">= 6.0.0",
