--- a/templates/package.json
+++ b/templates/package.json
@@ -19,7 +19,6 @@
 		"webpack": "^5.6.0",
 		"webpack-cli": "^4.1.0",
 		"css-loader": "^5.0.1",
-		"css-minimizer-webpack-plugin": "^1.1.5",
 		"eslint": "^7.13.0",
 		<%_ if(webpack['file-loader']) { -%>
 		"file-loader": "^6.2.0",
@@ -43,9 +42,6 @@
 		<%_ if(webpack['purgecss-webpack-plugin']) { -%>
 		"purgecss-webpack-plugin": "^3.0.0",
 		<%_ } -%>
-		<%_ if(webpack['purgecss-webpack-plugin']) { -%>
-		"purgecss-webpack-plugin": "^3.0.0",
-		<%_ } -%>
 		<%_ if(webpack['terser-webpack-plugin']) { -%>
 		"terser-webpack-plugin": "^5.0.3",
 		<%_ } -%>
@@ -58,7 +54,7 @@
 		"webpack-merge": "^5.4.0",
 		"speed-measure-webpack-plugin": "^1.3.3",
 		"webpack-bundle-analyzer": "^4.1.0",
-		"hard-source-webpack-plugin": "^0.13.1",
+		"hard-source-webpack-plugin": "^0.13.1"
 	},
 	"engines": {
 		"node": ">= 6.0.0",
