--- a/templates/package.json
+++ b/templates/package.json
@@ -20,13 +20,13 @@
 		"webpack-cli": "^4.1.0",
 		"css-loader": "^5.0.1",
 		"eslint": "^7.13.0",
-		<%_ if(webpack['file-loader']) { -%>
-		"file-loader": "^6.2.0",
-		<%_ } -%>
 		"webpack-dev-server": "^3.11.0",
 		"friendly-errors-webpack-plugin": "^1.7.0",
 		"@q/sofe-eslint": "^1.0.6",
 		"@q/sofe-stylelint": "^1.0.7",
+		<%_ if(webpack['file-loader']) { -%>
+		"file-loader": "^6.2.0",
+		<%_ } -%>
 		<%_ if(webpack['css-minimizer-webpack-plugin']) { -%>
 		"css-minimizer-webpack-plugin": "^1.1.5",
 		<%_ } -%>
@@ -38,6 +38,8 @@
 		<%_ } -%>
 		<%_ if(webpack['mini-css-extract-plugin']) { -%>
 		"mini-css-extract-plugin": "^1.3.1",
+		<%_ } else { -%>
+		"style-loader": "2.0.0",
 		<%_ } -%>
 		<%_ if(webpack['purgecss-webpack-plugin']) { -%>
 		"purgecss-webpack-plugin": "^3.0.0",
