--- a/templates/package.json
+++ b/templates/package.json
@@ -49,6 +49,7 @@
 		<%_ } -%>
 		<%_ if(webpack['ts-loader']) {-%>
 		"ts-loader": "^8.0.11",
+		"typescript": "^4.1.2",
 		<%_ } -%>
 		<%_ if(webpack['postcss-loader']) {-%>
 		"postcss-loader": "4.1.0",
