--- a/templates/package.json
+++ b/templates/package.json
@@ -5,7 +5,7 @@
 	"author": "<%= author %>",
 	"scripts": {
 		"so:dev": "webpack --watch --config sobuild.dev.js",
-		"so:serve": "webpack serve --config sobuild.dev.js --open 'Google Chrome'",
+		"so:serve": "webpack serve --config sobuild.dev.js",
 		"so:prod": "webpack --watch --config sobuild.prod.js"
 	},
 	"dependencies": {},
@@ -57,6 +57,7 @@
 		"webpack-merge": "^5.4.0",
 		"speed-measure-webpack-plugin": "^1.3.3",
 		"webpack-bundle-analyzer": "^4.1.0",
+		"address": "^1.1.2",
 		"hard-source-webpack-plugin": "^0.13.1"
 	},
 	"engines": {
