--- a/templates/package.json
+++ b/templates/package.json
@@ -34,6 +34,7 @@
 		"html-webpack-plugin": "^4.5.0",
 		<%_ } -%>
 		<%_ if(webpack['less-loader']) { -%>
+	    "less": "^3.12.2",
 		"less-loader": "^7.1.0",
 		<%_ } -%>
 		<%_ if(webpack['mini-css-extract-plugin']) { -%>
